# borsuk

./: .gitignore  .impeccable.md  .pre-commit-config.yaml  .prettierignore  Cargo.toml  LICENSE  README.md  design.md  multimode.md  ruff.toml  work.md  work_state.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  pages.yml  publish.yml
crates/borsuk/: Cargo.toml
crates/borsuk-cli/: Cargo.toml
crates/borsuk-cli/src/: main.rs
crates/borsuk-cli/tests/: cli.rs
crates/borsuk-node/: Cargo.toml  build.rs
crates/borsuk-node/src/: lib.rs
crates/borsuk-python/: Cargo.toml
crates/borsuk-python/src/: lib.rs
crates/borsuk/benches/: local_search.rs
crates/borsuk/examples/: benchmark_report.rs  build_config_timing.rs  docs_ladder.rs  leaf_capability_timing.rs  local_index.rs  memory_scale.rs  production_bench.rs  s3_index.rs
crates/borsuk/src/: bm25.rs  build_timing.rs  centroid_hnsw.rs  error.rs  format.rs  index.rs  lib.rs  maintenance.rs  manifest.rs  metadata.rs  metric.rs  observability.rs  record.rs  segment.rs  segment_cache.rs  sparse.rs  sparse_index.rs  sparse_named_sidecar.rs  sparse_named_store.rs  storage.rs  text.rs  turboquant.rs  vector_sidecar.rs
crates/borsuk/tests/: bm25_search.rs  build_config.rs  consistency.rs  cosine_pruning.rs  dataset_scaling.rs  explain.rs  fault_injection.rs  filtering_bench.rs  format.rs  geo_filter.rs  hybrid_search.rs  in_memory_preload.rs  known_issue_compaction_delete.rs  large_scale.rs  leaf_capability.rs  local_index.rs  metric_pruning_bench.rs  metrics.rs  mixture_workload_bench.rs  named_vectors.rs  package_metadata.rs  paged_delete_compaction.rs  performance_smoke.rs  production_workload.rs  regex_filter.rs  rerank.rs  s3_compatible.rs  s3_soak.rs  sparse_inverted_bench.rs  sparse_named_shard.rs  sparse_named_vectors.rs  sparse_search.rs  sparse_storage.rs  text_storage.rs  tracing_smoke.rs  turboquant_ab.rs  upsert.rs  vector_encoding.rs  wal.rs  workload_bench.rs
crates/borsuk/tests/common/: mod.rs
docs/: api.md  architecture.md  benchmarks.md  consistency.md  drop-in.md  production-readiness.md  storage-format.md
docs/superpowers/plans/: 2026-07-04-production-readiness.md  2026-07-05-benchmark-evidence-dashboard.md  2026-07-08-metadata-filtering.md  2026-07-15-paged-pq-graph-diskann.md  2026-07-15-perfect-lib-workstreams.md
docs/superpowers/reviews/: 2026-07-05-planet-scale-s3-review.md
docs/superpowers/specs/: 2026-07-05-benchmark-evidence-dashboard-design.md  2026-07-08-dropin-adapters-design.md  2026-07-08-metadata-filtering-design.md  2026-07-09-named-vectors.md  2026-07-10-representation-aware-vectors.md
docs/web/: app.js  docs.html  hero3d.js  index.html  landing.css  lifecycle3d.js  metadata3d.js  research.html  styles.css  viz3d.js
docs/web/assets/benchmarks/: billion-attempt.csv  dataset-scaling.csv  filtering.csv  hundred-million-build.csv  hundred-million-read.csv  large-scale.csv  lifecycle.csv  memory-scale.csv  metric-pruning.csv  mixture-workload.csv  parallel.csv  production_cold_warm.csv  production_concurrency.csv  production_recall.csv  production_workload.csv  production_write_costs.csv  routing-overfetch.csv  scale.csv  sequential.csv  sparse_inverted.csv  sparsity.csv  workload.csv
examples/minio/: README.md  compose.yaml  run-smoke.sh
examples/rag/: README.md  langchain_rag.py  rag_chat.py  simple_rag.py
examples/seaweedfs/: README.md  compose.yaml  run-smoke.sh  s3.json
python/: README.md  pyproject.toml
python/examples/: cookbook.py  docs_ladder.py  local_index.py  s3_index.py
python/src/borsuk/: __init__.py  __init__.pyi
python/src/borsuk/compat/: __init__.py  _common.py  chroma.py  langchain.py  pinecone.py  qdrant.py  s3vectors.py  turbopuffer.py
python/tests/: test_api.py  test_compat.py  test_examples.py  test_package.py  test_parity.py  test_warm.py  typing_usage.py
scripts/: bench_s3_full.sh  check_repo_policy.py  fetch_ann_dataset.py  install-hooks.sh  sync_docs_examples.mjs  test_check_repo_policy.py  test_docs_web.mjs
tests/fixtures/: metadata_parity.json
