[workspace]
members = [
  "crates/borsuk",
  "crates/borsuk-cli",
  "crates/borsuk-node",
  "crates/borsuk-python",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/riomus/borsuk"
homepage = "https://riomus.github.io/borsuk"
documentation = "https://docs.rs/borsuk"
rust-version = "1.88"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
