[workspace]
members = [
  "crates/borsuk",
  "crates/borsuk-cli",
  "crates/borsuk-node",
  "crates/borsuk-python",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/CausalityHQ/borsuk"
homepage = "http://causality.pl/borsuk/"
documentation = "https://docs.rs/borsuk"
rust-version = "1.88"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
