[build-system]
requires = ["maturin>=1.9,<2"]
build-backend = "maturin"

[project]
name = "borsuk"
version = "0.1.0"
description = "Native Python API for BORSUK, backed by Rust through PyO3"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "BORSUK contributors" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
  "ann",
  "similarity-search",
  "vector-search",
  "s3",
  "parquet",
  "rust",
]

[project.urls]
Homepage = "http://causality.pl/borsuk/"
Repository = "https://github.com/CausalityHQ/borsuk"
Documentation = "http://causality.pl/borsuk/"
Issues = "https://github.com/CausalityHQ/borsuk/issues"

[tool.maturin]
manifest-path = "../crates/borsuk-python/Cargo.toml"
python-source = "src"
module-name = "borsuk._borsuk"
bindings = "pyo3"
include = [
  { path = "README.md", format = "wheel" },
  { path = "LICENSE", format = "wheel" },
  { path = "src/borsuk/__init__.pyi", format = "wheel" },
  { path = "src/borsuk/py.typed", format = "wheel" },
]
exclude = [
  "src/**/__pycache__",
  "src/**/*.pyc",
]
