[package]
name = "borsuk-cli"
version = "0.1.0"
description = "Command-line administration tool for BORSUK"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[[bin]]
name = "borsuk"
path = "src/main.rs"

[dependencies]
borsuk = { path = "../borsuk", version = "0.1.0" }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
assert_cmd = "2.1"
tempfile = "3.23"

[lints]
workspace = true
