[package]
name = "borsuk-node"
version = "0.1.0"
description = "N-API native bindings for BORSUK"
edition.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "borsuk_node"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
borsuk = { path = "../borsuk", version = "0.1.0" }
napi = { version = "3.10", default-features = false, features = ["napi8", "serde-json"] }
napi-derive = "3.5"
serde_json = "1.0"

[build-dependencies]
napi-build = "2.2"

[lints]
workspace = true
