[package]
name = "borsuk-python"
version = "0.1.0"
description = "PyO3 native bindings for BORSUK"
edition.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "_borsuk"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
borsuk = { path = "../borsuk", version = "0.1.0" }
pyo3 = { version = "0.29", features = ["extension-module"] }
serde_json = "1.0"

[lints]
workspace = true
