[package]
name = "borsuk"
version = "0.1.0"
description = "Blob-Oriented Retrieval with Segmental Unified KNN"
readme = "../../README.md"
keywords = ["ann", "similarity-search", "vector-search", "s3", "parquet"]
categories = ["algorithms", "database-implementations", "science"]
edition.workspace = true
license-file = "../../LICENSE"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
rust-version.workspace = true

[lib]
name = "borsuk"
path = "src/lib.rs"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
arrow-array = "59.0"
arrow-schema = "59.0"
blake3 = "1.8"
bytes = "1.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures-util = "0.3"
object_store = { version = "0.14", features = ["aws", "azure", "gcp", "fs"] }
parquet = "59.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["rt-multi-thread"] }
tracing = { version = "0.1", optional = true }
url = "2.5"
uuid = { version = "1.18", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.7"
memory-stats = "1.2"
tempfile = "3.23"
tokio = { version = "1.48", features = ["time"] }

[lints]
workspace = true

[[bench]]
name = "local_search"
harness = false
